[metadata]
name = artisan-scope-YOUR-USERNAME-HERE
version = 0.0.1
author = Example Author
author_email = author@example.com
description = The Artisan Coffee Roasting Program
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .

packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    artisan = artisanlib.main:main

[options.packages.find]
include =
    uic
    artisan
    artisanlib
    help
    plus
